Add run tests API
